--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,6 @@ Temporary Items
 
 # End of https://www.toptal.com/developers/gitignore/api/macos
 
+
+# Config file can contain secrets
 config.py
