--- a/config.py.example
+++ b/config.py.example
@@ -8,5 +8,9 @@ config = {
     'openweather_token' : 'YOUR_BIG_OPENWEATHERMAP_KEY',        # Get a free key at https://home.openweathermap.org
     'latitude' : '0.0000',                                      # Your home latitude
     'longitude' : '0.0000',                                     # and longitude
-    'pa_sensor_id' : '58069'                                    # Find your sensor at https://purpleair.com/map. The ID will be after "select=" in the URL.
+    'pa_sensor_id' : '58069',                                    # Find your sensor at https://purpleair.com/map. The ID will be after "select=" in the URL.
+    'units' : 'imperial'
+    # "standard" = temp in Kelvin
+    # "imperial" = temp in Farenheit
+    # "metric" = temp in Celcius
     }
